# Proyecto-libreria

./: .gitignore  .pre-commit-config.yaml  README.md  book_repository_mock.py  console_client.py  index.html  newFile.1.js  newFile.js  pyproject.toml  pyscript_index.html  requirements-dev.txt  requirements.txt  script.js  server_log.txt  streamlit_app.py  styles.css  test_bcrypt.py  verify_reg.py  visual_docs.html
Git/: Git.url
app/: config.py  container.py  logging_config.py  main.py  middleware.py
app/adapters/repositories/: __init__.py  book_repository_mock.py
app/domain/: exceptions.py
app/domain/entities/: book.py  favorite.py
app/domain/services/: book_service.py
app/models/: book.py
app/ports/: __init__.py
app/ports/repositories/: __init__.py  favorite_repository.py  user_repository.py
app/routers/: books.py  newsletter.py
backend/: main.py
backend/app/: __init__.py  config.py  container.py  logging_config.py  main.py  middleware.py
backend/app/adapters/repositories/: author_repository_mock.py  book_repository_mock.py  favorite_repository_mock.py  user_repository_mock.py
backend/app/adapters/security/: security_adapter.py
backend/app/models/: author.py  book.py  user_schema.py
backend/app/routers/: auth.py  authors.py  favorites.py
docs/: analisis_arquitectura.html  analisis_arquitectura.md  analisis_final_interactivo.html  analisis_final_lumiere.md  arquitectura_lumiere.html  frontend_categories.md
frontend/: index.html  styles.css
frontend actual/: script.js
tests/: conftest.py
tests/unit/: test_auth_logic.py  test_health.py  test_mock_example.py  test_mock_example_advanced.py  test_properties.py
(+7 files in other folders)
